<resources>
    <string name="app_name">HallEase</string>
    <string name="student_dashboard">Student Dashboard</string>
    <string name="for_you">For you</string>
    <string name="create_complaint">Create Complaint</string>
    <string name="tap_this">Tap This</string>
    <string name="complaint_history">Complaint History</string>
    <string name="apply_for_seat">Apply for Seat</string>
    <string name="heading_of_the_complaint">Heading of the complaint</string>
    <string name="router_problem">Router Problem</string>
    <string name="write_your_complaint_here">Write your complaint here</string>
    <string name="the_router_in_front_of_room_no_470_is_not_working_properly">The router in front of room no. 470 is not working properly...</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_your_cuet_mail_for_the_verification_process_we_will_send_a_code_to_your_email">Enter your CUET mail for the verification process, we will send a code to your email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="continue_text">Continue</string>
    <string name="sign_in">Sign In</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="cuet_mail_id">Cuet Mail ID</string>
    <string name="password">Password</string>
    <string name="have_no_account">Have no account?</string>
    <string name="click_here_to_sign_up">Click here to sign up</string>
    <string name="apply_for_room">Apply for Room</string>
    <string name="choose_a_room">Choose a Room</string>
    <string name="student_ids_of_applicants">Student IDs of Applicants</string>
    <string name="student_1">Student 1:</string>
    <string name="enter_student_id">Enter Student ID</string>
    <string name="student_2">Student 2:</string>
    <string name="student_3">Student 3:</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="students_information">Students Information</string>
    <string name="room_requests">Room Requests</string>
    <string name="all_complaints">All Complaints</string>
    <string name="available_rooms">Manage Rooms</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_your_account_to_get_started">Create your account to get started</string>
    <string name="student_name">Student Name</string>
    <string name="student_id">Student ID</string>
    <string name="email">Email</string>
    <string name="mobile_no">Mobile No</string>
    <string name="department_name">Department Name</string>
    <string name="i_agree_to_the_terms_of_use_and_privacy_policy">I agree to the terms of use and privacy policy</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="click_here">Click here</string>
    <string name="add_new_room_here">Add new room here</string>
    <string name="add">Add</string>
    <string name="room_no">Room No.</string>
    <string name="room_no_a503">Room no A503</string>
    <string name="student_id_123456">Student ID: 123456</string>
    <string name="department_cse">Department: CSE</string>
    <string name="phone_123_456_7890">Phone: 123-456-7890</string>
    <string name="remove">Remove</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="pending">Pending</string>
    <string name="status">Status:</string>
    <string name="id1_2011001_nid2_2011002_nid3_2011003_nid4_2011004">ID1: 2011001\nID2: 2011002\nID3: 2011003\nID4: 2011004</string>
    <string name="status_pending">Pending</string>
    <string name="status_resolved">Resolved</string>
    <string name="status_unknown">Unknown</string>
    <string name="room_no_a502">Room No: A502</string>
    <string name="complaints">Complaints</string>
    <string name="user_name">User Name</string>
    <string name="select_the_type_of_complaint">Select the type of complaint</string>
    <string name="internet_is_not_working_properly">Internet is not working properly.</string>
    <string name="_12_12_2024">12.12.2024</string>
    <string name="given_from_2004034">Given from: 2004034</string>
    <string name="given_from">Given by:</string>
    <string-array name="complaint_types">
        <item>Electrical Issue</item>
        <item>Water Leakage</item>
        <item>Maintenance</item>
        <item>Internet Issue</item>
        <item>Other</item>
    </string-array>
</resources>