<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="16dp">



    <TextView
        android:id="@+id/title_create_complaint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/create_complaint"
        android:textColor="#FF0000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_heading_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/heading_of_the_complaint"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_create_complaint" />

    <EditText
        android:id="@+id/et_complaint_heading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/router_problem"
        android:textColor="@color/black"
        android:padding="8dp"
        android:textSize="25sp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tv_heading_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tv_complaint_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_your_complaint_here"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_complaint_type" />

    <EditText
        android:id="@+id/et_complaint_details"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:hint="@string/the_router_in_front_of_room_no_470_is_not_working_properly"
        android:background="#F5E8FF"
        android:padding="8dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/tv_complaint_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btn_submit_complaint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:backgroundTint="#4A90E2"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/et_complaint_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/ComplaintType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#000000"
        android:textSize="18sp"
        android:text="@string/select_the_type_of_complaint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_complaint_heading" />
    <Spinner
        android:id="@+id/spinner_complaint_type"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/btn_dropdown"
        app:layout_constraintTop_toBottomOf="@id/ComplaintType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:entries="@array/complaint_types"/>


</androidx.constraintlayout.widget.ConstraintLayout>
